--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,7 +2,7 @@
 :root {
     --primary-: #007bff;
     --infor-: #17a2b8;
-    --success-: #0af140;
+    --success-: #198754;
     --warning-: #ffc107;
     --danger-: #dc3545;
     --dark-: #343a40;
