--- a/src/pages/Service/service.scss
+++ b/src/pages/Service/service.scss
@@ -21,6 +21,7 @@
 
             .content-text {
                 display: flex;
+                width: 100%;
                 padding-bottom: 60px;
                 border-bottom: 1px solid var(--border-color-);
                 + .content-text {
