--- a/src/Components/Notice/notice.scss
+++ b/src/Components/Notice/notice.scss
@@ -1,6 +1,7 @@
 .notice-container {
     margin-top: -15px;
     width: 320px;
+    z-index: 9999999;
 
     .dropdown-wrapper {
         width: 100%;
@@ -27,6 +28,11 @@
             
             p {
                 text-align: left !important;
+            }
+            .notice-detail{
+                color: var(--black-);
+                padding: 8px 4px;
+                border-bottom: 1px solid var(--border-color-);
             }
         }
 
