--- a/src/Components/Notice/notice.scss
+++ b/src/Components/Notice/notice.scss
@@ -12,6 +12,8 @@
         align-items: center;
         justify-content: center;
         max-height: min((100% - 96px) - 60px, 734px);
+        overflow-y: auto;
+        overflow-x: hidden;
         border-radius: 5px;
         background-color: var(--white-);
         box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
@@ -22,27 +24,38 @@
         h3 {
             color: var(--black-);
         }
-        .notice-wrapper {
+        .notice-success {
             width: 100%;
-            border: 1px solid var(--border-color-);
-            
-            p {
-                text-align: left !important;
+            h3 {
+                text-align: center;
             }
-            .notice-detail{
-                color: var(--black-);
-                padding: 8px 4px;
-                border-bottom: 1px solid var(--border-color-);
-            }
-        }
+            .notice-wrapper {
+                width: 100%;
+                border: 1px solid var(--border-color-);
+                border-radius: 5px;
+                max-height: 400px;
+                overflow-x: hidden;
+                overflow-y: auto;
 
-        .dropdown-btn {
-            width: 100%;
-            border-bottom: 1px solid var(--border-color-);
-            justify-content: flex-start;
-            &:hover {
-                color: var(--white-);
-                background-color: var(--main-color-);
+                p {
+                    text-align: left !important;
+                }
+                .notice-detail {
+                    color: var(--black-);
+                    padding: 8px 4px;
+                    border-bottom: 1px solid var(--border-color-);
+                }
+            }
+
+            .dropdown-btn {
+                padding: 8px 0;
+                text-align: center;
+                cursor: pointer;
+    
+                &:hover {
+                    color: var(--white-);
+                    background-color: var(--main-color-);
+                }
             }
         }
     }
