--- a/src/pages/Admin/admin.scss
+++ b/src/pages/Admin/admin.scss
@@ -63,6 +63,70 @@
                 font-size: 1.4rem;
                 font-weight: 400;
             }
+            .search {
+                display: flex;
+                position: relative;
+                align-items: center;
+                height: 30px;
+                margin: 10px 15px;
+                border: 1px solid var(--border-color-);
+                border-radius: 1px;
+            
+                input {
+                    flex: 1;
+                    height: 100%;
+                    padding-left: 10px;
+                    color: var(--black-);
+                    font-size: 1.5rem;
+                    caret-color: var(--main-color-);
+                    background-color: transparent;
+                }
+                input:not(:placeholder-shown) ~ .search-btn {
+                    color: rgba(22, 24, 35, 0.75);
+                }
+            }
+            .clear,
+            .loading {
+                position: absolute;
+                right: calc(5% + 40px);
+                top: 50%;
+                transform: translateY(-50%);
+                background-color: transparent;
+                color: rgba(22, 24, 35, 0.5);
+            }
+            .clear {
+                &::after {
+                    content: '';
+                    position: absolute;
+                    top: 50%;
+                    right: -12px;
+                    transform: translateY(-50%);
+                    width: 1px;
+                    height: 30px;
+                    background-color: var(--border-color-);
+                }
+            }
+            .loading {
+                animation: spinner 0.8s linear infinite;
+            }
+            .search-btn {
+                display: flex;
+                padding: 5px 10px;
+                justify-content: center;
+                font-size: 1.4rem;
+                color: rgba(22, 24, 35, 0.5);
+                background-color: transparent;
+                transition: background-color 0.2s ease;
+            
+                &:hover {
+                    cursor: pointer;
+                    background-color: rgba(22, 24, 35, 0.03);
+                }
+                &:active {
+                    background-color: rgba(22, 24, 35, 0.1);
+                    border: none;
+                }
+            }
 
             .edit-btn {
                 background-color: var(--bg-grey-);
